--- a/MyMusicApp/MyMusicApp/Views/Base.lproj/Main.storyboard
+++ b/MyMusicApp/MyMusicApp/Views/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -39,6 +40,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="956.48854961832058" y="-27.464788732394368"/>
+        </scene>
+        <!--Search Result View Controller-->
+        <scene sceneID="5WL-8r-3cG">
+            <objects>
+                <viewController id="DBC-zp-la0" customClass="SearchResultViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2eQ-BM-VCa">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4d9-3U-7kL">
+                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Yzl-lR-X8b">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Jqa-ni-DJL" customClass="MusicCollectionViewCell" customModule="MyMusicApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="LpB-pc-fHx">
+                                            <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fWD-aT-ONV">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="fWD-aT-ONV" firstAttribute="top" secondItem="LpB-pc-fHx" secondAttribute="top" id="208-UH-5cw"/>
+                                                <constraint firstItem="fWD-aT-ONV" firstAttribute="leading" secondItem="LpB-pc-fHx" secondAttribute="leading" id="O6U-vd-Vpy"/>
+                                                <constraint firstAttribute="trailing" secondItem="fWD-aT-ONV" secondAttribute="trailing" id="jzo-gj-mfJ"/>
+                                                <constraint firstAttribute="bottom" secondItem="fWD-aT-ONV" secondAttribute="bottom" id="xTb-Fz-XDZ"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Av9-AV-kbp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="4d9-3U-7kL" firstAttribute="top" secondItem="Av9-AV-kbp" secondAttribute="top" id="N3X-Jz-y2H"/>
+                            <constraint firstItem="Av9-AV-kbp" firstAttribute="trailing" secondItem="4d9-3U-7kL" secondAttribute="trailing" id="gzo-il-ap5"/>
+                            <constraint firstItem="4d9-3U-7kL" firstAttribute="leading" secondItem="Av9-AV-kbp" secondAttribute="leading" id="lHs-CW-L2V"/>
+                            <constraint firstItem="Av9-AV-kbp" firstAttribute="bottom" secondItem="4d9-3U-7kL" secondAttribute="bottom" id="lPf-2a-eIc"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zjm-pk-s9J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1742" y="-6"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="RMw-Zb-HJt">
